# anv

./: Cargo.toml  README.md  dist-workspace.toml  release.py
.github/workflows/: release.yml
src/: cache.rs  config.rs  history.rs  main.rs  player.rs  proxy.rs  types.rs
src/providers/: allanime.rs  mangadex.rs  mangapill.rs  mod.rs
src/sync/: mal.rs  mod.rs
