[package]
name = "anv"
version = "0.3.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Vedant-Asati03/anv"
description = "Stream anime or read manga from AllAnime straight into mpv from your terminal."
keywords = ["anime", "cli", "streaming", "mpv"]
categories = ["command-line-utilities", "multimedia::video"]
authors = ["Vedant Asati"]
rust-version = "1.85"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }
dirs-next = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
config = { version = "0.15.19", features = ["toml"] }
toml = "1.0.3"
rand = "0.10.0"
open = "5.3.3"
url = "2.5.8"
scraper = "0.22"
